Enhance editor functionality and security features
- Updated `App.razor` to use `@if` for conditional rendering and included TinyMCE and Quill scripts conditionally.
- Added HTTP client service and antiforgery protection in `Program.cs`.
- Simplified usage of `TinyMceEditor` and `QuillEditor` in `NieuwsArtikelForm.razor`.
- Introduced `ImageFile` class for image metadata management.
- Created `QuillExplorer.razor` for image selection modal and added `BootstrapToast.razor` for user notifications.
- Enhanced `QuillEditor.razor` and `quill-blazor-interop.js` for improved image handling.
- Updated project references in `Blazor.Shared.Editors.csproj` and `UL.UI.Components.csproj`.
- Improved modal functionality in `GenericModal.razor` and `ManualCopyModal.razor`.

--- a/Blazor.News.Sample/Components/App.razor
+++ b/Blazor.News.Sample/Components/App.razor
@@ -29,7 +29,7 @@
         <script src="https://cdn.jsdelivr.net/npm/quill@2/dist/quill.js"></script>
         <script src="_content/Blazor.Shared.Editors/JS/quill-blazor-interop.js"></script>
     }
-    if(tinyMceEditorEnabled){
+    @if(tinyMceEditorEnabled){
         @*Als je TinyMCEeditor wilt gebruiken  !   wel effe gratis een Apikey Aanmaken https://www.tiny.cloud/pricing/ *@
         <script src="https://cdn.tiny.cloud/1/b27yqg5y7edfx6r5nypuj5oxa3vkw81phe31eluv9647z5pi/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
         <script src="_content/Blazor.Shared.Editors/JS/tinymce-blazor-interop.js"></script>
