--- a/Blazor.News.Sample/Components/Pages/Counter.razor
+++ b/Blazor.News.Sample/Components/Pages/Counter.razor
@@ -1,7 +1,11 @@
 ﻿@page "/counter"
+@using UL.UI.Components.Components
 @rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
+<BootstrapToast @ref="toast" PositionHorizontal="center" PositionVertical="top" />
+<button type="button" class="btn btn-primary" @onclick="ShowToast">Toon Toast</button>
+
 
 <h1>Counter</h1>
 
@@ -11,9 +15,16 @@
 
 @code {
     private int currentCount = 0;
-
+    private BootstrapToast toast;
     private void IncrementCount()
     {
         currentCount++;
+    }
+    private async Task ShowToast()
+    {
+        if (toast != null)
+        {
+            await toast.Show("Succes!", "Je actie is geslaagd.", "success");
+        }
     }
 }
