--- a/Blazor.News/Components/_Imports.razor
+++ b/Blazor.News/Components/_Imports.razor
@@ -6,3 +6,5 @@
 @using Microsoft.JSInterop
 @using System.Globalization
 @using Blazor.News.DATA.ModelsDTO
+@using Blazor.Shared.Editors
+@using UL.UI.Components
